adding example for clase02

--- a/README.html
+++ b/README.html
@@ -119,13 +119,16 @@ $(document).ready(function () {
 </div>
 
 
-<div id="dplyr" class="section level1">
-<h1>dplyr</h1>
-<ul>
-<li>select, filter, mutate</li>
-<li>summarize, group_by</li>
-<li>select_if, mutate_if</li>
-</ul>
+<div id="usach-ingemat-intro-r-ds-201701" class="section level1">
+<h1>usach-ingemat-intro-r-ds-201701</h1>
+<p>Seminario Introducción R &amp; Data Science. Nos basaremos principalmente de <a href="http://r4ds.had.co.nz/">R for Data Science</a> de Garrett Grolemund y Hadley Wickham.</p>
+<div id="temasclases" class="section level2">
+<h2>Temas/Clases</h2>
+<p>Exploracion: - Introducción a R &amp; Rstudio, proyectos - Data frames, resumenes, joins <code>dplyr</code> - Visualización <code>ggplot2</code></p>
+<p>Importacion, limpieza y otras estructuras de datos - Lectura de datos csv, xlsx, APIs, html: <code>readr</code>, <code>rvest</code>, <code>httr</code> - Listas <code>purrr</code> - Expresiones regulares <code>stringr</code></p>
+<p>Modelamiento - Regresión Lineal - Árboles de decisión - Random Forests y Redes neuronales .(bagging) - Métricas de</p>
+<p>Comunicación - Markdown y <code>rmarkdown</code> - Aplicaciones <code>shiny</code> - Visualizacion: <code>htmlwidgets</code></p>
+</div>
 </div>
 
 
